add mobile support

--- a/web/feedback.html
+++ b/web/feedback.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <div class="innerContent" id="innerContent">
-                <div class="text-content">
+                <div class="text-content-feedback">
                     <h1>Feedback</h1>
                     <p>We would be thrilled if you would leave us some feedback how we can make your experience better
                     </p>
