add manifest for pwa installation

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="script.bundle.js" defer></script>
     <script src="https://autoajax.wireway.ch/autoajax.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
