--- a/web/app/index.html
+++ b/web/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="stylesheet" href="/app/index.css">
+    <link rel="stylesheet" href="/app/index.scss">
     <script src="/app/index.js" defer></script>
 </head>
 
