--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0, initial-scale=1.0">
     <title>Simple Music Player</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.scss">
     <script src="script.bundle.js" defer></script>
     <script src="https://autoajax.wireway.ch/autoajax.js"></script>
     <link rel="manifest" href="manifest.json">
