add simple analytics

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -7,6 +7,8 @@
     <title>Music Player</title>
     <link rel="stylesheet" href="/app/index.scss">
     <script src="/app/index.js" defer></script>
+    <script defer data-domain="deployments-64b3f36.wireway.ch" src="https://plausible.wireway.ch/js/script.js"></script>
+
 </head>
 
 <body>
