--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,8 @@
     <script src="script.bundle.js" defer></script>
     <script src="https://autoajax.wireway.ch/autoajax.js"></script>
     <link rel="manifest" href="manifest.json">
+    <script defer data-domain="deployments-64b3f36.wireway.ch" src="https://plausible.wireway.ch/js/script.js"></script>
+
 </head>
 
 <body>
