--- a/web/feedback.html
+++ b/web/feedback.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="index.scss">
     <script src="https://autoajax.wireway.ch/autoajax.js"></script>
     <script src="script.bundle.js" defer></script>
+    <script defer data-domain="deployments-64b3f36.wireway.ch" src="https://plausible.wireway.ch/js/script.js"></script>
+
 </head>
 
 <body>
