--- a/web/app/index.html
+++ b/web/app/index.html
@@ -17,7 +17,7 @@
             <input id="searchBar" type="text" placeholder="Search music...">
         </div>
         <ul class="music-list">
-            <p>Nothing here (yet)<br>
+            <p>Nothing here<br>
                 Press CTRL + K to search for a song.</p>
         </ul>
     </div>
